@@ -6,7 +6,7 @@
 <body bgcolor="#ffffff">
 <H1><a name="Sections"></a>SWIG-2.0 Documentation</H1>
 
-Last update : SWIG-2.0.1 (in progress)
+Last update : SWIG-2.0.1 (4 October 2010)
 
 <H2>Sections</H2>
 
