@@ -5,6 +5,15 @@ and CHANGES files.
 Release Notes
 =============
 
+SWIG-2.0.1 summary:
+- New language module: Go
+- New regular expression (regex) encoder for renaming symbols based on
+  the Perl Compatible Regular Expressions (PCRE) library.
+- Numerous fixes in reporting file and line numbers in error and warning
+  messages.
+- Various bug fixes and improvements in the C#, Lua, Perl, PHP, Ruby
+  and Python language modules.
+
 SWIG-2.0.0 summary:
 - License changes, see LICENSE file and http://www.swig.org/legal.html.
 - Much better nested class/struct support.
